--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,8 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=cyrillic');
+
+html {
+  height: 100%;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   background-color: #fafafa;
   padding-bottom: 73px;
+  height: 100%;
 }
+
+a {
+  color: #3596ff;
+}
+
+#root {
+  height: 100%;
+}
+
 header{
   background-color: white;
   border-bottom: #ffc699 solid 1px;
